--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
       <li>
         <a href="#" target="_blank">
           <!-- 3º Commit - Redes Sociales -->
-          <p>Facebook</p>
+          <p>jc Ustarroz</p>
         </a>
       </li>
       <li>
         <a href="#" target="_blank">
-          <p>Twitter</p>
+          <p>@ustarrozjc</p>
         </a>
       </li>
       <li>
         <a href="#" target="_blank">
-          <p>LinkedIN</p>
+          <p>ustarriz</p>
         </a>
       </li>
       <li>
         <a href="#" target="_blank">
-          <p>GitHub</p>
+          <p>soujiro27</p>
         </a>
       </li>
     </ul>
