--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <li>
         <a href="#" target="_blank">
           <!-- 3º Commit - Redes Sociales -->
-          <p>jc Ustarroz</p>
+          <p>Ustarroz</p>
         </a>
       </li>
       <li>
